src/index.css
:root {
  font-size: 62.5%;
}
html {
  scrollbar-color: #545454 #171717;
  scroll-behavior: smooth;
}
::-webkit-scrollbar {
  background-color: #171717;
}
::-webkit-scrollbar-thumb {
  background-color: #545454;
}
#bg {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  background-image: url(./bg2.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 30% 50%;
  z-index: -1;
  pointer-events: none;
}
model-viewer {
  --progress-bar-color: transparent;
}
h2 {
  scroll-margin-top: 150px;
  scroll-snap-margin-top: 150px;
}

section {
  padding: 50px 0;
}

section:first-of-type {
  padding: 0;
}

section:nth-of-type(2) {
  padding-top: 0;
}

@media (min-width: 640px) {
  h2 {
    scroll-margin-top: 100px;
    scroll-snap-margin-top: 100px;
  }
  section {
    padding: 100px 0;
  }
}

